--- a/htrsite/templates/home/index.html
+++ b/htrsite/templates/home/index.html
@@ -5,13 +5,11 @@
     <!-- Page Content -->
     <div class="container">
       <div class="row">
-        <div class="col-lg-12 text-center">
-          <h1 class="mt-5">Handwritten Text Recognition Dataset for Indian Scripts</h1>
+        <div class="col-lg-12">
+          <h1 class="mt-5 text-center">Handwritten Text Recognition Dataset for Indian Scripts</h1>
           <br><br>
-          <div class="col-md-12 text-center">
-            Lorem ipsum Lorem ipsum  Lorem ipsum  Lorem ipsum  Lorem ipsum 
-             Lorem ipsum  Lorem ipsum  Lorem ipsum  Lorem ipsum  Lorem ipsum  Lorem ipsum 
-              Lorem ipsum  Lorem ipsum  Lorem ipsum  Lorem ipsum  Lorem ipsum  Lorem ipsum  Lorem ipsum   
+          <div class="col-md-12">
+            {{data | safe}}
           </div>
         </div>
       </div>
